--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,15 @@
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - './nginx.conf/etc/nginx/nginx.conf'
+    depends_on:
+      - backend
+      - frontend
+
   frontend:
     build: 
       context: ./frontend
