--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
         server_name bis-api.online www.bis-api.online;
 
         location / {
-            proxy_pass http://172.18.0.3:5000;
+            proxy_pass http://localhost:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_http_version 1.1;
