--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,4 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "main:app", "--host", "127.0.0.1", "--port", "5000"]
+CMD ["uvicorn", "main:app", "--host", "localhost", "--port", "5000"]
