--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
         server_name bis-api.online www.bis-api.online;
 
         location / {
-            proxy_pass http://frontend:3000;
+            proxy_pass frontend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_http_version 1.1;
