--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SET HOST=0.0.0.0 && SET PORT=80 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
